--- a/src/main/resources/templates/välkommen.html
+++ b/src/main/resources/templates/välkommen.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Index</title>
+    <title>Välkommen</title>
 </head>
 <body>
-<h1 th:text="'Hej, ' + ${name} + '!'">Standard text</h1>
+<h1 th:text="'Välkommen, ' + ${name} + '!'">Standard text</h1>
 <!--om thymeleaf failar skrivs >Standard text<-->
 </body>
 </html>
