updated HomeController (bugfix)

--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -4,7 +4,7 @@
     <title>Välkommen</title>
 </head>
 <body>
-<h1 th:text="'Välkommen, ' + ${name} + '!'">Standard text</h1>
+<h1 th:text="${message} + '!'">Standard text</h1>
 <!--om thymeleaf failar skrivs >Standard text<-->
 </body>
 </html>
